# angiogenesis

./: .gitignore  CMakeLists.txt  README.md  backup_results.sh  bdm.json  helper-functions-plot.py  style_check.sh
.github/workflows/: code-style.yml  ubuntu-ci.yml
ROOT/: exp_fit.cpp
data/: dummy.vtp  dummy2.vtp  growth_data.csv  growth_data_combined.csv  vessel-diameter.txt
pysrc/: bernoulli.py  combine_data.py  fit-rat-vessels.py  forces.py  helper_functions_plot.py  hfunction.py  hfunction_optimizer.py  lfunction.py  paraview_tumor_rotation.py  paraview_tumor_slice.py  paraview_vegf_vessels.py  parse_metadata.py  plot-data.py  plot-permeability.py  plot-rat-vessels.py  timestep.py  translate_metadata.py
scripts/: colors.sh  create_movie.sh  extract_results.sh  replace.sh  trim.sh  trim_all.sh  util.sh  visualize-tumor-cells.sh  visualize-vessels.sh
scripts/experiments/: README.md  compile.sh  run_avascular_spheroid.sh  run_full_scale_model.sh  run_porous_tumor_core.sh  run_simplified_growth.sh  run_spheroid_threatment.sh  run_vessel_coupling.sh  run_vessel_to_center.sh
src/: angiogenesis.cc  angiogenesis.h  angiogenesis_simulation.cc  angiogenesis_simulation.h  main.cc  main.h  sim_param.cc  sim_param.h
src/modules/: element_container.cc  element_container.h  element_finder.cc  element_finder.h  mechanical_forces.cc  mechanical_forces.h  tip_cell_finder_operation.h  tipcell_container.cc  tipcell_container.h  tipcell_finder.cc  tipcell_finder.h  transition_probabilities.cc  transition_probabilities.h  treatment.cc  treatment.h  tumor_cell.cc  tumor_cell.h  vessel.cc  vessel.h
src/util/: analysis.cc  analysis.h  data_parser.cc  data_parser.h  neighbor_counter.h  pdf.cc  pdf.h  random_field.cc  random_field.h  timeseries_counters.cc  timeseries_counters.h  vector_operations.cc  vector_operations.h  visualize.cc  visualize.h
test/: test-main.cc  test-suite.cc  test_suit_agent.cc  test_suit_counters.cc  test_suit_forces.cc  test_suit_octree.cc  test_suit_parsers.cc  test_suit_pdf.cc  test_suit_random_field.cc  test_suit_transitions.cc  test_suit_treatment.cc  test_suit_tumor_cell.cc  test_suit_vector_operations.cc
test/data/: network.vtp
(+2 files in other folders)
